WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-08-17

Version 0.2.0 (under dev!):
   * fixed "wallops" command when received, now displayed by WeeChat (bug #17441)
   * fixed /wallops command (now many words are correctly sent)
   * fixed command 348 (channel exception list, received by /mode #chan e)
   * added missing modes (channel & user), now all modes are allowed (bug #16606)
   * added "%m" for completion with self nick (on current server)
   * added missing IRC commands (310, 326, 329, 338)
   * fixed DCC restore after /upgrade (order is now correctly saved)
   * fixed away after server disconnection (now away is set again when
     reconnecting) (bug #16359)
   * fixed DCC file connection problem (connection from receiver to sender)
   * improved DCC speed (up to x5 on LAN) by forking for DCC files and a
     new option "dcc_fast_send" (does not wait for ACK) (task #5758)
   * fixed crash when purging DCC with high number of DCC (> window size)
   * fixed completion for command handlers (now empty completion_template
     means nick completion, "-" string means no completion at all)
   * fixed nick alignment problem when look_nickmode is off
   * added generic function for incoming numeric IRC commands (bug #16611)
   * fixed crash when doing "/part something" on a server buffer (bug #17201)
   * charsets are now checked when set by /charset command
   * added "look_save_on_exit" option (patch from Emanuele Giaquinta)
   * fixed crash on DCC buffer under Darwin 8 (bug #17115)
   * added configure option for doc XSL prefix (bug #16991)
   * fixed bug with spaces in script names (bug #16957)
   * fixed random crash when "MODE #chan -l" is received
   * fixed bug in IRC parser (random crash with malformed IRC messages)
   * fixed refresh bugs when terminal is resized: too many refreshs,
     display bug with splited windows
   * case ignored for channel names in charset options (bug #16858)