@@ -4,6 +4,7 @@ WeeChat - Wee Enhanced Environment for Chat
 ChangeLog - 2006-08-17
 
 Version 0.2.0 (under dev!):
+   * added send of "quit" message to server when using /disconnect
    * fixed "wallops" command when received, now displayed by WeeChat (bug #17441)
    * fixed /wallops command (now many words are correctly sent)
    * fixed command 348 (channel exception list, received by /mode #chan e)
